# market-management

./: .env.example  .gitignore  README.md  db-update.bat  dev.bat  docker-compose.yml  package-lock.json  package.json  setup.bat
.airo/: config.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: OfflineBanner.tsx  SettingsScreen.tsx
apps/desktop/src/lib/: db.ts  sync.ts
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/admin/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/pos/: page.tsx
apps/web/src/components/admin/: AdminIcons.tsx  OfficeUserForm.tsx  ProductForm.tsx  SalesList.tsx  StaffForm.tsx  StockAdjustForm.tsx  StoreSettingsForm.tsx  SupplierDeliveryForm.tsx  SupplierForm.tsx  SupplierPaymentForm.tsx  SupplierReturnForm.tsx
apps/web/src/components/pos/: PosApp.tsx  PosReceipt.tsx  PosReceiveStock.tsx  PosSetup.tsx  PosStaffLogin.tsx  PosSupplierReturn.tsx  PosSyncPanel.tsx
apps/web/src/lib/: admin-session.ts  assign-receipt-number.ts  auth.ts  db.ts  permissions.ts  pos-db.ts  pos-sync.ts  receipt-number.ts  store-settings.ts  supplier-returns.ts  suppliers.ts  sync.ts
apps/web/src/types/: next-auth.d.ts
scripts/: check-env.mjs  setup.mjs  start-production.mjs
(+40 files in other folders)
